modern makefile recursion
Modernize recursion in makefiles by using $(MAKE) instead of make, using the -C
switch instead of "cd;", and some other tweaks.  All to allow "make -n" to give
more detail.

darcs-hash:20080204155306-837cd-09a0c4c12b42d9d4f7faf5934a8bebbeb13b576c.gz

--- a/cdecl/makefile
+++ b/cdecl/makefile
@@ -13,7 +13,7 @@ SCC = ../scsc/scc
 	${SCC} -C $*.sc
 
 all:	
-	make "SCC=${SCC}" "SRCDIR=${SRCDIR}" cdecl sizeof
+	$(MAKE) "SCC=${SCC}" "SRCDIR=${SRCDIR}" cdecl sizeof
 
 cdecl:	${CSRC}
 	${SCC} -o cdecl ${CSRC}
