Handle and detect stack overflows and segfaults
darcs-hash:20080205234542-b1033-13196979bc5c34034a40f6eff87640f7527a7243.gz

--- a/ports/AMD64/makefile-head
+++ b/ports/AMD64/makefile-head
@@ -5,6 +5,7 @@
 # Default flags to use when invoking the C compiler.
 
 CFLAGS = -mno-sse2 -mno-sse3 -m64 -O2
+LDFLAGS = -lsigsegv
 CC = gcc
 
 # Assembly language object files.
