convert Scribe documentation to LaTeX
darcs-hash:20080206160621-837cd-2015e468f32347f2f5c3b4a725e887b198a7696e.gz

--- a/doc/makefile
+++ b/doc/makefile
@@ -1,22 +1,16 @@
 # Makes the documentation files.
 
+all: embedded.pdf index.pdf intro.pdf smithnotes.pdf
+
 .SUFFIXES:
-.SUFFIXES: .psf .mss
 
-embedded.psf:	embedded.mss
-	scribe embedded.mss
-
-index.psf:	index.mss
-	scribe index.mss
-
-intro.psf:	intro.mss
-	scribe intro.psf
-
-smithnotes.psf:	smithnotes.mss
-	scribe smithnotes.psf
+.SUFFIXES: .tex .dvi .ps .pdf
+TEX=latex
+%.ps:  %.dvi; dvips -K -Ppdf -G0 -R0 -q -tletter -o $@ $<
+%.pdf: %.ps; ps2pdf $< $@
 
 clean:
-	-rm -r *.BAK *.CKP
+	-rm -r *.pdf *.dvi *.aux *.log *.BAK *.CKP
 
 tarfiles:
-	@echo " doc/README doc/*.mss doc/*.psf doc/*.l doc/makefile "
+	@echo " doc/README doc/*.tex doc/*.psf doc/*.l doc/makefile "
