fiddle with latex source, add author
darcs-hash:20080212134103-837cd-fdf1983e463bdb3302941ad593d6207d04f2b901.gz

--- a/doc/makefile
+++ b/doc/makefile
@@ -10,7 +10,7 @@ TEX=latex
 %.pdf: %.ps; ps2pdf $< $@
 
 clean:
-	-rm -r *.pdf *.dvi *.aux *.log *.BAK *.CKP
+	-rm -rf *.pdf *.dvi *.aux *.log *.BAK *.CKP
 
 tarfiles:
 	@echo " doc/README doc/*.tex doc/*.psf doc/*.l doc/makefile "
