Automatically test on build
darcs-hash:20080508051442-b1033-442aac35a63f7cc46faee89c567ef677ea539b5f.gz

--- a/ports/makefile
+++ b/ports/makefile
@@ -9,6 +9,7 @@
 port:
 	$(MAKE) -C scrt port
 	$(MAKE) -C scsc port
+	$(MAKE)	-C test autotest
 
 # A "private" working copy of the current compiler, libary, and interpreter
 # is installed in a directory by the following command:
