standardize installation target and parameters
darcs-hash:20080802221833-837cd-be08ed93d61e5354c909a1334bf0c41c3293bbc6.gz

--- a/doc/makefile
+++ b/doc/makefile
@@ -1,6 +1,11 @@
 # Makes the documentation files.
 
-all: embedded.pdf index.pdf intro.pdf smithnotes.pdf r4rs.pdf
+ALL = embedded.pdf index.pdf intro.pdf smithnotes.pdf r4rs.pdf
+all: $(ALL)
+
+prefix=/usr/local
+DOCDIR=$(prefix)/doc/scheme2c
+MANDIR=$(prefix)/man
 
 .SUFFIXES:
 
@@ -14,6 +19,19 @@ r4rs.dvi: TEXINPUTS=r4rs:
 r4rs.dvi: TEX=latex209
 r4rs.dvi: r4rs/r4rs.tex
 	$(TEX) -output-directory=. $<
+
+INSTALL = install
+
+install: install-pdf install-man
+
+install-pdf:
+	$(INSTALL) -d $(DESTDIR)$(DOCDIR)/
+	$(INSTALL) $(ALL) $(DESTDIR)$(DOCDIR)/
+
+install-man:
+	$(INSTALL) -d $(DESTDIR)$(MANDIR)/man1
+	$(INSTALL) scc.l $(DESTDIR)$(MANDIR)/man1/scc.1
+	$(INSTALL) sci.l $(DESTDIR)$(MANDIR)/man1/sci.1
 
 clean:
 	-rm -rf *.pdf *.dvi *.aux *.log *.BAK *.CKP
