misc debian fixes: typos, dependencies, unknown architectures
darcs-hash:20080810214922-837cd-2a41ec5a919b518eff79354e02cdc0ab8a10355e.gz

--- a/debian/rules
+++ b/debian/rules
@@ -17,12 +17,14 @@
 export DH_OPTIONS
 
 
-arch := $(shell dpkg --print-architecture)
+arch := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 ifeq ($(arch),amd64)
   S2C_ARCH = AMD64
-endif
-ifeq ($(arch),i386)
+else ifeq ($(arch),i386)
   S2C_ARCH = LINUX
+else
+  $(warning Warning: unsupported architecture $(arch))
+  S2C_ARCH = UNSUPPORTED
 endif
 
 
