--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: scheme2c
 Section: devel
 Priority: extra
 Maintainer: Barak A. Pearlmutter <bap@debian.org>
-Build-Depends: debhelper (>= 7), libsigsegv-dev
+Build-Depends: debhelper (>= 7), libsigsegv-dev, texlive-latex-base, texlive-latex-extra, texlive-fonts-recommended, ghostscript, latex209-bin
 Build-Depends-Indep: texlive-latex-base, texlive-latex-extra, texlive-fonts-recommended, ghostscript, latex209-bin
+Build-Depends-Arch: libsigsegv-dev,
 Standards-Version: 3.8.0
 
 Package: scheme2c
@@ -12,13 +13,13 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Joel Bartlett's fabled Scheme->C system
  The original Scheme->C system, the first of its kind.  It conforms to
  the R4RS Scheme standard, and compiles Scheme sources to C as an
- intermediate step, allowing easy intergration with external
+ intermediate step, allowing easy integration with external
  libraries.  Also included is an interpreter, for development.  Due to
- a variety of clever technques, the system is quite fast.
+ a variety of clever techniques, the system is quite fast.
 
 Package: scheme2c-doc
 Section: doc
 Architecture: all
 Description: Documentation for the Scheme->C system
- The documenation that accompanies the Scheme->C system includes a
+ The documentation that accompanies the Scheme->C system includes a
  programmer's guide, tutorial, and a copy of the R4RS specification.
