clean doc/ more thoroughly
darcs-hash:20080810221143-837cd-24c09a73f4d621beacbf08267a2b94a7fedba331.gz

--- a/doc/makefile
+++ b/doc/makefile
@@ -34,4 +34,4 @@ install-man:
 	$(INSTALL) sci.l $(DESTDIR)$(MANDIR)/man1/sci.1
 
 clean:
-	-rm -rf *.pdf *.dvi *.aux *.log *.BAK *.CKP
+	-rm -rf *.pdf *.dvi *.aux *.log *.BAK *.CKP *.toc *.idx
