new section: lisp
darcs-hash:20090317211759-837cd-451cb3c6d7d2b298c26fe425f457a9a450e28d70.gz

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: scheme2c
-Section: devel
+Section: lisp
 Priority: extra
 Maintainer: Barak A. Pearlmutter <bap@debian.org>
 Build-Depends: debhelper (>= 7), libsigsegv-dev, texlive-latex-base, texlive-latex-extra, texlive-fonts-recommended, ghostscript, latex209-bin
