--- a/ports/LINUX/makefile-head
+++ b/ports/LINUX/makefile-head
@@ -4,17 +4,17 @@
 
 # Default flags to use when invoking the C compiler.
 
-CFLAGS = -m32 -O2 -march=i386
+CFLAGS = -march=native -O2 -finline-functions -fno-math-errno -frename-registers -fomit-frame-pointer -m32
 LDFLAGS = -lsigsegv
 CC = gcc
 
 # Assembly language object files.
 
-Aruntime = linux.o 
+Aruntime = linux.o
 
 # Profiled library
 
-Plib = 
+Plib =
 
 # Installation tools
 
