--- a/ports/LINUX/makefile-head
+++ b/ports/LINUX/makefile-head
@@ -5,7 +5,7 @@
 # Default flags to use when invoking the C compiler.
 
 CFLAGS = -march=native -O2 -finline-functions -fno-math-errno -frename-registers -fomit-frame-pointer -m32
-LDFLAGS = -lsigsegv
+LDFLAGS = -m32 -lsigsegv
 CC = gcc
 
 # Assembly language object files.
