--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,18 @@
-LINUX/
-doc/*.aux
-doc/*.dvi
-doc/*.idx
-doc/*.log
-doc/*.toc
-doc/embedded.pdf
-doc/index.pdf
-doc/intro.pdf
-doc/r4rs.pdf
-doc/smithnotes.pdf
-build-arch-stamp
-build-indep-stamp
-configure-stamp
-debian/files
-debian/*.log
-debian/*.debhelper
-debian/*.substvars
-debian/scheme2c-doc/
-debian/scheme2c/
+/AMD64/
+/LINUX/
+/debian/*.debhelper
+/debian/*.log
+/debian/*.substvars
+/debian/files
+/debian/scheme2c-doc/
+/debian/scheme2c/
+/doc/*.aux
+/doc/*.dvi
+/doc/*.idx
+/doc/*.log
+/doc/*.toc
+/doc/embedded.pdf
+/doc/index.pdf
+/doc/intro.pdf
+/doc/r4rs.pdf
+/doc/smithnotes.pdf
