fancier git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,23 @@
-LINUX/
-doc/*.aux
-doc/*.dvi
-doc/*.idx
-doc/*.log
-doc/*.toc
-doc/embedded.pdf
-doc/index.pdf
-doc/intro.pdf
-doc/r4rs.pdf
-doc/smithnotes.pdf
+/AMD64/
+/AOSF/
+/DECMIPS/
+/FREEBSD/
+/HP300/
+/HP700/
+/LINUX/
+/MAC/
+/SGIMIPS/
+/SONYMIPS/
+/SUNOS4/
+/SUNOS5/
+/VAX/
+/doc/*.aux
+/doc/*.dvi
+/doc/*.idx
+/doc/*.log
+/doc/*.toc
+/doc/embedded.pdf
+/doc/index.pdf
+/doc/intro.pdf
+/doc/r4rs.pdf
+/doc/smithnotes.pdf
