--- a/debian/rules
+++ b/debian/rules
@@ -32,8 +32,8 @@ override_dh_auto_install:
 ## Unneeded due to debian/scheme2c.manpages
 # $(MAKE) -C doc DESTDIR=`pwd`/debian/scheme2c \
 #		 MANDIR=/usr/share/man \
-#
-		install-man
+#		install-man
+
 ## Unneeded due to debian/scheme2c-doc.docs
 # $(MAKE) -C doc DESTDIR=`pwd`/debian/scheme2c-doc \
 #		 DOCDIR=/usr/share/doc/scheme2c-doc \
