allow parallel build, e.g., via dpkg-buildpackage -j or env DEB_BUILD_OPTIONS="parallel=8"

--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ else
 endif
 
 build clean install binary-arch binary-indep binary:
-	dh $@
+	dh $@ --parallel
 
 .PHONY: build clean install binary-arch binary-indep binary
 
