--- a/debian/rules
+++ b/debian/rules
@@ -25,13 +25,12 @@ override_dh_auto_configure:
 override_dh_auto_build:
 	$(MAKE) -C $(S2C_ARCH)	# architecture dependent, executables
 	$(MAKE) -C $(S2C_ARCH)/cdecl all # sizeof cdecl
-	$(MAKE) -C $(S2C_ARCH)/xlib sizeof.cdecl scxl.a scixl
+	$(MAKE) -C $(S2C_ARCH)/xlib sizeof.cdecl s2cxl.a s2cixl
 	$(MAKE) -C doc		# architecture independent, documentation
 
 override_dh_auto_install:
 	$(MAKE) -C $(S2C_ARCH)/scrt DESTDIR=`pwd`/debian/scheme2c prefix=/usr install
 	$(MAKE) -C $(S2C_ARCH)/scsc DESTDIR=`pwd`/debian/scheme2c prefix=/usr install
-	cp -a $(S2C_ARCH)/cdecl/cdecl debian/scheme2c/usr/bin/s2cdecl
 
 ## Documentation Installation
 ## Unneeded due to debian/scheme2c.manpages
